src/apps/pdcst/Slider.module.css
.container {
  width: 100%;
  font-size: 1rem;
  position: relative;
  user-select: none;
}

.track {
  width: 100%;
  height: 0.5em;
  margin: 0.25em 0.5em;
  cursor: pointer;
  /* background: linear-gradient(var(--accent) 50%, var(--bg) 50%); */
  border-radius: 9999px;
  cursor: pointer;
}

.thumb {
  position: absolute;
  top: 0;
  /* left: 0; */
  height: 1em;
  width: 1em;
  border-radius: 1em;
  background: var(--text);
  cursor: grab;
}

